--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -1,5 +1,5 @@
 # Build a zarr file
-name: build-zarr
+name: Build
 run-name: ${{ inputs.workflow_name }}
 
 # Set workflow input parameters and defaults
