--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -108,7 +108,9 @@ jobs:
             run:
                 shell: bash -el {0}           
         steps:
-            - uses: actions/checkout@v3
+            - name: Checkout Repository
+              uses: uses: actions/checkout@v3
+              
             - name: Set up Python 3.10
               uses: actions/setup-python@v3
               with:
