--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -8,12 +8,12 @@ on:
         type: string
         required: true
         description: startDatetime
-        default: 2024-03-10T000000Z
+        default: '2024-03-10T00:00:00Z'
       endDatetime:
         type: string
         required: true
         description: endDatetime
-        default: 2024-03-17T000000Z
+        default: '2024-03-17T00:00:00Z'
       min_lon:
         type: float
         required: true
