--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -143,8 +143,8 @@ jobs:
         env:
           OPENTOPO_API_KEY: ${{ secrets.OPENTOPO_API_KEY }}
         run: |
-          python -c '\
+          python -c "\
           import goes_ortho as go; \
-          go.get_data.make_request_json(${{ inputs.workflow_name }}, ${{ inputs.startDatetime }}, ${{ inputs.endDatetime }}, \
+          go.get_data.make_request_json('${{ inputs.workflow_name }}', '${{ inputs.startDatetime }}', '${{ inputs.endDatetime }}', \
           [${{ inputs.min_lon }}, ${{ inputs.min_lat }}, ${{ inputs.max_lon }}, ${{ inputs.max_lat }}], \
-          ${{ inputs.satellite }}, ${{ inputs.product }}, ${{ inputs.band }}, ${{ inputs.variable }}, ${{ secrets.OPENTOPO_API_KEY }})'
+          '${{ inputs.satellite }}', '${{ inputs.product }}', ${{ inputs.band }}, '${{ inputs.variable }}', '${{ secrets.OPENTOPO_API_KEY }}')"
