--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -145,6 +145,6 @@ jobs:
         run: |
           python -c "\
           import goes_ortho as go; \
-          go.get_data.make_request_json('${{ inputs.workflow_name }}', str(${{ inputs.startDatetime }}), str(${{ inputs.endDatetime }}), \
+          go.get_data.make_request_json('${{ inputs.workflow_name }}', '(${{ inputs.startDatetime }}', '${{ inputs.endDatetime }}', \
           [${{ inputs.min_lon }}, ${{ inputs.min_lat }}, ${{ inputs.max_lon }}, ${{ inputs.max_lat }}], \
           '${{ inputs.satellite }}', '${{ inputs.product }}', ${{ inputs.band }}, '${{ inputs.variable }}', '${{ secrets.OPENTOPO_API_KEY }}')"
