--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -117,30 +117,21 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
+      - name: Install Conda environment with Micromamba
+        uses: mamba-org/setup-micromamba@v1
         with:
-          python-version: "3.10"
-      - name: Add conda to system path
-        run: |
-          echo $CONDA/bin >> $GITHUB_PATH
-      - name: Install mamba and dependencies
+          cache-environment: true
+          environment-file: environment.yml
+          environment-name: goesenv
+      - name: Install additional dependencies
         run: >
-          conda install mamba -c conda-forge
-
-          mamba env update --file environment.yml --name goesenv
-
-          source $CONDA/etc/profile.d/conda.sh
-
-          conda activate goesenv
+          mamba activate goesenv
 
           pip install goes_ortho@git+https://github.com/spestana/goes-ortho@re-org
 
           pip install goespy@git+https://github.com/spestana/goes-py
 
           pip install gtsa@git+https://github.com/friedrichknuth/gtsa
-
-          mamba init
       - name: Run build-zarr script
         env:
           OPENTOPO_API_KEY: ${{ secrets.OPENTOPO_API_KEY }}
