--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -125,8 +125,8 @@ jobs:
         with:
           cache-environment: true
           environment-file: environment.yml
+          init-shell: bash
           environment-name: goesenv
-          activate-environment: goesenv
       - name: Run build-zarr script
         env:
           OPENTOPO_API_KEY: ${{ secrets.OPENTOPO_API_KEY }}
