--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Install Conda environment with Micromamba
         uses: mamba-org/setup-micromamba@v1
         with:
-          cache-environment: true
+          cache-environment: false
           environment-file: environment.yml
           init-shell: bash
           environment-name: goesenv
