--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Install Conda environment with Micromamba
         uses: mamba-org/setup-micromamba@v1
         with:
-          cache-environment: false
+          cache-environment: true
           environment-file: environment.yml
           init-shell: bash
           environment-name: goesenv
@@ -137,3 +137,7 @@ jobs:
           [${{ inputs.min_lon }}, ${{ inputs.min_lat }}, ${{ inputs.max_lon }}, ${{ inputs.max_lat }}], \
           '${{ inputs.satellite }}', '${{ inputs.product }}', ${{ inputs.band }}, '${{ inputs.variable }}', '${{ secrets.OPENTOPO_API_KEY }}')"
         shell: micromamba-shell {0}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ${{ inputs.workflow_name }}
+          path: *.json
