--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -76,7 +76,7 @@ on:
       variable:
         type: choice
         required: true
-        description: band
+        description: variable
         default: 'Rad'
         options:
           - 'Rad'
