--- a/environment.yml
+++ b/environment.yml
@@ -36,6 +36,7 @@ dependencies:
   - flake8
   - pip
   - pip:
+    - geogif
     - "--editable=git+https://github.com/spestana/goes-py#egg=goespy"
     - "--editable=git+https://github.com/spestana/goes-ortho@re-org#egg=goes_ortho"
     - "--editable=git+https://github.com/friedrichknuth/gtsa#egg=gtsa"
