Add gif build to workflow

--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -154,16 +154,16 @@ jobs:
           import goes_ortho as go; \
           go.get_data.build_zarr('goes-build-zarr.json')"
         shell: micromamba-shell {0}
-      #- name: Make preview gif animation
-      #  run: |
-      #    python -c "\
-      #    import xarray as xr; import geogif; \
-      #    ds = xr.open_zarr('goes-build-zarr.zarr'); \
-      #    da = ds.${{ inputs.product }}
-      #    gif_bytes = geogif.dgif(da, fps=5, cmap="Greys_r", date_format=r"%Y-%m-%d %H:%M:%S", date_position="ul", bytes=True).compute(); \
-      #    with open("goes.gif", "wb") as f:\
-      #        f.write(gif_bytes);"
-      #  shell: micromamba-shell {0}
+      - name: Make preview gif animation
+        run: |
+          python -c "\
+          import xarray as xr; import geogif; \
+          ds = xr.open_zarr('goes-build-zarr.zarr'); \
+          da = ds.${{ inputs.product }}
+          gif_bytes = geogif.dgif(da, fps=5, cmap="Greys_r", date_format=r"%Y-%m-%d %H:%M:%S", date_position="ul", bytes=True).compute(); \
+          with open("goes.gif", "wb") as f:\
+              f.write(gif_bytes);"
+        shell: micromamba-shell {0}
       - uses: actions/upload-artifact@v4
         with:
           name: goes-build-zarr
