Fix nested quotes

--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -160,8 +160,8 @@ jobs:
           import xarray as xr; import geogif; \
           ds = xr.open_zarr('goes-build-zarr.zarr'); \
           da = ds.${{ inputs.product }}
-          gif_bytes = geogif.dgif(da, fps=5, cmap="Greys_r", date_format=r"%Y-%m-%d %H:%M:%S", date_position="ul", bytes=True).compute(); \
-          with open("goes.gif", "wb") as f:\
+          gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format=r'%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute(); \
+          with open('goes.gif', 'wb') as f:\
               f.write(gif_bytes);"
         shell: micromamba-shell {0}
       - uses: actions/upload-artifact@v4
