--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -161,8 +161,7 @@ jobs:
           ds = xr.open_zarr('goes-build-zarr.zarr'); \
           da = ds.${{ inputs.product }}
           gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format='%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute(); \
-          with open('goes.gif', 'wb') as f: \
-              f.write(gif_bytes);"
+          with open('goes.gif', 'wb') as f: f.write(gif_bytes);"
         shell: micromamba-shell {0}
       - uses: actions/upload-artifact@v4
         with:
