--- a/.github/workflows/build-zarr.yml
+++ b/.github/workflows/build-zarr.yml
@@ -155,15 +155,15 @@ jobs:
           go.get_data.build_zarr('goes-build-zarr.json')"
         shell: micromamba-shell {0}
       - name: Make preview gif animation
+        shell:  bash -el -c "python -u {0}"
         run: |
-          python -c "\
-          import xarray as xr; import geogif; \
-          ds = xr.open_zarr('goes-build-zarr.zarr'); \
-          da = ds.${{ inputs.product }}; \
-          gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format='%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute(); \
-          with open('goes.gif', 'wb') as f: \
-              f.write(gif_bytes);"
-        shell: micromamba-shell {0}
+          import xarray as xr
+          import geogif
+          ds = xr.open_zarr('goes-build-zarr.zarr')
+          da = ds.${{ inputs.product }}
+          gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format='%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute()
+          with open('goes.gif', 'wb') as f:
+              f.write(gif_bytes)
       - uses: actions/upload-artifact@v4
         with:
           name: goes-build-zarr
