--- a/.github/workflows/build-merged.yml
+++ b/.github/workflows/build-merged.yml
@@ -146,16 +146,20 @@ jobs:
         run: |
           python -c "\
           import goes_ortho as go; \
-          go.get_data.make_request_json('goes-build-zarr', '${{ inputs.startDatetime }}', '${{ inputs.endDatetime }}', \
+          go.get_data.make_request_json('goes16-build-zarr', '${{ inputs.startDatetime }}', '${{ inputs.endDatetime }}', \
           [${{ inputs.min_lon }}, ${{ inputs.min_lat }}, ${{ inputs.max_lon }}, ${{ inputs.max_lat }}], \
-          '${{ inputs.satellite }}', '${{ inputs.product }}', ${{ inputs.band }}, '${{ inputs.variable }}', '${{ secrets.OPENTOPO_API_KEY }}')"
+          'goes16', '${{ inputs.product }}', ${{ inputs.band }}, '${{ inputs.variable }}', '${{ secrets.OPENTOPO_API_KEY }}')"
+          go.get_data.make_request_json('goes18-build-zarr', '${{ inputs.startDatetime }}', '${{ inputs.endDatetime }}', \
+          [${{ inputs.min_lon }}, ${{ inputs.min_lat }}, ${{ inputs.max_lon }}, ${{ inputs.max_lat }}], \
+          'goes18', '${{ inputs.product }}', ${{ inputs.band }}, '${{ inputs.variable }}', '${{ secrets.OPENTOPO_API_KEY }}')"
         shell: micromamba-shell {0}
       
       - name: Download GOES imagery and build zarr file
         run: |
           python -c "\
           import goes_ortho as go; \
-          go.get_data.build_zarr('goes-build-zarr.json')"
+          go.get_data.build_zarr('goes16-build-zarr.json')"
+          go.get_data.build_zarr('goes18-build-zarr.json')"
         shell: micromamba-shell {0}
       
       # https://words.yuvi.in/post/python-in-github-actions/
@@ -164,8 +168,11 @@ jobs:
         run: |
           import xarray as xr
           import geogif
-          ds = xr.open_zarr('goes-build-zarr.zarr')
-          da = ds.${{ inputs.variable }}
+          ds16 = xr.open_zarr('goes16-build-zarr.zarr')
+          ds18 = xr.open_zarr('goes18-build-zarr.zarr')
+          ds18['${{ inputs.variable }}'] = (['time', 'latitude', 'longitude'] , (ds16.${{ inputs.variable }}.values + ds18.${{ inputs.variable }}.values) / 2)
+          ds18.to_zarr('goes-merged.zarr')
+          da = ds18.${{ inputs.variable }}
           gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format='%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute()
           with open('goes.gif', 'wb') as f:
               f.write(gif_bytes)
