--- a/.github/workflows/build-merged.yml
+++ b/.github/workflows/build-merged.yml
@@ -170,7 +170,8 @@ jobs:
           import geogif
           ds16 = xr.open_zarr('goes16-build-zarr.zarr')
           ds18 = xr.open_zarr('goes18-build-zarr.zarr')
-          ds18['${{ inputs.variable }}'] = (['time', 'latitude', 'longitude'] , (ds16.${{ inputs.variable }}.values + ds18.${{ inputs.variable }}.values) / 2)
+          ds16['time'] = ds18.time
+          ds18['${{ inputs.variable }}'] = (ds16.Rad + ds18.Rad) / 2
           ds18.to_zarr('goes-merged.zarr')
           da = ds18.${{ inputs.variable }}
           gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format='%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute()
