--- a/.github/workflows/build-merged.yml
+++ b/.github/workflows/build-merged.yml
@@ -169,13 +169,21 @@ jobs:
           import xarray as xr
           import geogif
           ds16 = xr.open_zarr('goes16-build-zarr.zarr')
+          da = ds16.${{ inputs.variable }}
+          gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format='%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute()
+          with open('goes16.gif', 'wb') as f:
+              f.write(gif_bytes)
           ds18 = xr.open_zarr('goes18-build-zarr.zarr')
+          da = ds18.${{ inputs.variable }}
+          gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format='%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute()
+          with open('goes18.gif', 'wb') as f:
+              f.write(gif_bytes)
           ds16['time'] = ds18.time
           ds18['${{ inputs.variable }}'] = (ds16.Rad + ds18.Rad) / 2
           ds18.to_zarr('goes-merged.zarr')
           da = ds18.${{ inputs.variable }}
           gif_bytes = geogif.dgif(da, fps=5, cmap='Greys_r', date_format='%Y-%m-%d %H:%M:%S', date_position='ul', bytes=True).compute()
-          with open('goes.gif', 'wb') as f:
+          with open('goes-merged.gif', 'wb') as f:
               f.write(gif_bytes)
       - uses: actions/upload-artifact@v4
         with:
